# cube-timer

./: .gitignore  Cargo.toml  README.md  index.html
assets/: index.css
src/: app.rs  history.rs  main.rs  preferences.rs  saving.rs  seq_gen.rs  shuffle.rs  shuffling.rs  stats.rs  timer.rs  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: history_view.rs  mod.rs  shuffle_display.rs  solve_display.rs
