[package]
name = "cube-timer"
version = "0.0.1"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
iced = { version = "0.12.1", features = ["smol", "image"] }
image = "0.25.1"
itertools = "0.13.0"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
