[package]
name = "yew-cube-timer"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
gloo = "0.11.0"
gloo-console = "0.3.0"
gloo-timers = "0.3.0"
itertools = "0.13.0"
js-sys = "0.3.69"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = ["DomTokenList"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
